# backend_interview_template

./: .env.example  .gitignore  README.md  alembic.ini  conftest.py  postman_collection.json  pyproject.toml
alembic/: env.py
alembic/versions/: 00d040ad36b4_initial_schema_with_auth_users_and_.py
app/: __init__.py  db.py  main.py
app/core/: auth.py  config.py  permissions.py
app/features/auth/: README.md  model.py  resource.py  routes.py  schemas.py  service.py  utils.py
app/features/auth/tests/: test_auth.py
app/features/clinics/: README.md  __init__.py  model.py  resource.py  routes.py  schemas.py  service.py  utils.py
app/features/clinics/tests/: __init__.py  test_clinics.py
app/features/users/: README.md  resource.py  routes.py  schemas.py  service.py  utils.py
app/features/users/tests/: __init__.py  test_users.py
app/shared/: decorators.py  exceptions.py  responses.py
